Removed methods from newer Java versions to make the API compatible with Java 1.8 again